feat: add private trial execution log
